--- a/components/quick-actions-dialog.html
+++ b/components/quick-actions-dialog.html
@@ -125,7 +125,7 @@
                 </div>
             </div>
 
-            <div layout="row" layout-align="center center" class="width-300-px" ng-show="isAdmin">
+            <div layout="row" layout-align="center center" class="width-300-px" ng-show="isUserManager">
 
                 <div id="outdoor-tags-on-off-container" layout="column" class="padding-10-px width-50"
                      layout-align="center center">
