--- a/components/outdoor-location.html
+++ b/components/outdoor-location.html
@@ -1,14 +1,16 @@
 <div ng-controller="languageController">
     <div layout="column" layout-align="center center" layout-wrap class="height-100-vh">
         <div layout="column" class="top-corner">
-            <img ng-show="outdoorCtrl.showAlarmsIcon" ng-click="outdoorCtrl.showAlarms()" class="margin-bottom-3"
-                 src="img/icons/alarm-icon.png" alt="{{lang.activeAllarms}}" title="{{lang.activeAllarms}}">
-            <img ng-show="outdoorCtrl.showOfflineTagsIcon" ng-click="outdoorCtrl.showOfflineTags()"
-                 class="margin-bottom-5-px" src="img/icons/offline_tags_alert_64.png"
-                 alt="{{lang.offlineTags}}" title="{{lang.offlineTags}}">
-            <img ng-show="outdoorCtrl.showEngineOffIcon"
-                 src="img/icons/engine_off_64.png" alt="{{lang.engineOff}}"
-                 title="{{lang.engineOff}}">
+            <div layout="column" class="background-transparent-gray">
+                <img ng-show="outdoorCtrl.showAlarmsIcon" ng-click="outdoorCtrl.showAlarms()" class="pulse-image margin-bottom-5-px padding-top-bottom-6px"
+                     src="img/icons/alarm-icon.png" alt="{{lang.activeAllarms}}" title="{{lang.activeAllarms}}">
+                <img ng-show="outdoorCtrl.showOfflineTagsIcon" ng-click="outdoorCtrl.showOfflineTags()"
+                     class="margin-bottom-5-px padding-top-bottom-6px border-bottom-3-white border-top-3-white" src="img/icons/offline_tags_alert_64.png"
+                     alt="{{lang.offlineTags}}" title="{{lang.offlineTags}}">
+                <img ng-show="outdoorCtrl.showEngineOffIcon" class="adding-top-bottom-6px border-bottom-3-white"
+                     src="img/icons/engine_off_64.png" alt="{{lang.engineOff}}" title="{{lang.engineOff}}">
+            </div>
+            <div ng-if="outdoorCtrl.showAlarmsIcon || outdoorCtrl.showOfflineTagsIcons || outdoorCtrl.showOfflineAnchorsIcon || outdoorCtrl.showEngineOffIcon" class="triangle-transparent-gray-down"></div>
         </div>
         <!--map container-->
         <div id="map-div">
@@ -153,6 +155,9 @@
                     </md-content>
                 </md-sidenav>
             </section>
+            <div ng-if="ctrlDataService.playAlarm && ctrlDataService.switch.playAudio" layout="column" layout-align="center center" class="bottom-left fadeIn">
+                <md-button ng-click="muteAlarms()" class="md-raised background-red color-white"><div><span class="margin-right-10-px text-bold">{{lang.muteAlarm}}</span><img class="vertical-align-middle" src="img/icons/mute_alarms.png" alt=""></div></md-button>
+            </div>
         </div>
         <!--end menu container-->
     </div>
