--- a/components/canvas.html
+++ b/components/canvas.html
@@ -37,56 +37,56 @@
                     <md-button aria-label="Disegna riga verticale"
                                class="md-fab md-raised md-mini border-radius-none background-transparent height-60px width-60px margin-none padding-10-px"
                                ng-click="canvasCtrl.speedDialClicked('vertical')">
-                        <img src="img/icons/vertical-line.png" class="width-100 height-100"
+                        <img src="img/icons/vertical-line.png" class="width-100 height-100 rotate-image"
                              alt="{{lang.drawVerticalLine}}" title="{{lang.drawVerticalLine}}">
                     </md-button>
 
                     <md-button aria-label="Disegna riga orizontale"
                                class="md-fab md-raised md-mini border-radius-none background-transparent height-60px width-60px margin-none padding-10-px"
                                ng-click="canvasCtrl.speedDialClicked('horizontal')">
-                        <img src="img/icons/horizontal-line.png" class="width-100 height-100"
+                        <img src="img/icons/horizontal-line.png" class="width-100 height-100 rotate-image"
                              alt="{{lang.drawHorizontalLine}}" title="{{lang.drawHorizontalLine}}">
                     </md-button>
 
                     <md-button aria-label="Disegna riga inclinata"
                                class="md-fab md-raised md-mini border-radius-none background-transparent height-60px width-60px margin-none padding-10-px"
                                ng-click="canvasCtrl.speedDialClicked('inclined')">
-                        <img src="img/icons/inclined_line.png" class="width-100 height-100"
+                        <img src="img/icons/inclined_line.png" class="width-100 height-100 rotate-image"
                              alt="{{lang.drawInclinedLine}}" title="{{lang.drawInclinedLine}}">
                     </md-button>
 
                     <md-button aria-label="Cancella linea"
                                class="md-fab md-raised md-mini border-radius-none background-transparent height-60px width-60px margin-none padding-10-px"
                                ng-click="canvasCtrl.speedDialClicked('delete')">
-                        <img src="img/icons/erase_line.png" class="width-100 height-100"
+                        <img src="img/icons/erase_line.png" class="width-100 height-100 rotate-image"
                              alt="{{lang.deleteLine}}" title="{{lang.deleteLine}}">
                     </md-button>
 
                     <md-button aria-label="{{lang.changeAnchorPosition}}"
                                class="md-fab md-raised md-mini border-radius-none background-transparent height-60px width-60px margin-none padding-10-px"
                                ng-click="canvasCtrl.speedDialClicked('drop_anchor')">
-                        <img src="img/icons/move_anchor.png" class="width-100 height-100"
+                        <img src="img/icons/move_anchor.png" class="width-100 height-100 rotate-image"
                              alt="{{lang.changeAnchorPosition}}" title="{{lang.changeAnchorPosition}}">
                     </md-button>
 
                     <md-button aria-label="{{lang.drawZone}}"
                                class="md-fab md-raised md-mini border-radius-none background-transparent height-60px width-60px margin-none padding-10-px"
                                ng-click="canvasCtrl.speedDialClicked('draw_zone')">
-                        <img src="img/icons/draw_zone.png" class="width-100 height-100"
+                        <img src="img/icons/draw_zone.png" class="width-100 height-100 rotate-image"
                              alt="{{lang.drawZone}}" title="{{lang.drawZone}}">
                     </md-button>
 
                     <md-button aria-label="{{lang.deleteZone}}"
                                class="md-fab md-raised md-mini border-radius-none background-transparent height-60px width-60px margin-none padding-10-px"
                                ng-click="canvasCtrl.speedDialClicked('delete_zone')">
-                        <img src="img/icons/delete_zone.png" class="width-100 height-100"
+                        <img src="img/icons/delete_zone.png" class="width-100 height-100 rotate-image"
                              alt="{{lang.deleteZone}}" title="{{lang.deleteZone}}">
                     </md-button>
 
                     <md-button aria-label="{{lang.modifyZone}}"
                                class="md-fab md-raised md-mini border-radius-none background-transparent height-60px width-60px margin-none padding-10-px"
                                ng-click="canvasCtrl.speedDialClicked('modify_zone')">
-                        <img src="img/icons/modify_zone.png" class="width-100 height-100"
+                        <img src="img/icons/modify_zone.png" class="width-100 height-100 rotate-image"
                              alt="{{lang.modifyZone}}" title="{{lang.modifyZone}}">
                     </md-button>
                 </md-fab-actions>
